[package]
name = "mclib"
version = "0.0.1"
authors = ["S. Suprun <hello@syoma.website>"]
description = "Utils and helpers for Minecraft protocol"
license = "Apache-2.0"
categories = ["game-development"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mclib-macros = { path = "macros", version = "0.0.1" }

flate2 = { version = "1.0.28" }
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
